docs(changelog): expand upstream_keepalive changelog entry

--- a/changelog/3.6.0/3.6.0.md
+++ b/changelog/3.6.0/3.6.0.md
@@ -17,7 +17,7 @@
  [#12087](https://github.com/Kong/kong/issues/12087)
  [KAG-3080](https://konghq.atlassian.net/browse/KAG-3080)
 
-- Bumped default values of `nginx_http_keepalive_requests` and `upstream_keepalive_max_requests` to `10000`.
+- Bumped default values of `nginx_http_keepalive_requests` and `upstream_keepalive_max_requests` to `10000`. These changes are optimized to work better in systems with high throughput. In a low-throughput setting, these new settings may have visible effects in loadbalancing - it can take more requests to start using all the upstreams than before.
  [#12223](https://github.com/Kong/kong/issues/12223)
  [KAG-3360](https://konghq.atlassian.net/browse/KAG-3360)
 #### Core
