Apply suggestions from code review
Co-authored-by: lena-larionova <54370747+lena-larionova@users.noreply.github.com>

--- a/changelog/3.7.0/3.7.0.md
+++ b/changelog/3.7.0/3.7.0.md
@@ -8,19 +8,19 @@
  [#12784](https://github.com/Kong/kong/issues/12784)
  [KAG-3653](https://konghq.atlassian.net/browse/KAG-3653)
 
-- Speeded up the router matching when the `router_flavor` is `traditional_compatible` or `expressions`.
+- Sped up the router matching when the `router_flavor` is `traditional_compatible` or `expressions`.
  [#12467](https://github.com/Kong/kong/issues/12467)
  [KAG-3653](https://konghq.atlassian.net/browse/KAG-3653)
 #### Plugin
 
-- **Opentelemetry**: increase queue max batch size to 200
+- **OpenTelemetry**: Increased queue max batch size to 200.
  [#12488](https://github.com/Kong/kong/issues/12488)
  [KAG-3173](https://konghq.atlassian.net/browse/KAG-3173)
 
 ### Breaking Changes
 #### Plugin
 
-- **AI-Proxy**: To support the new messages API of `Anthropic`, the upstream path of the `Anthropic` for `llm/v1/chat` route type is changed from `/v1/complete` to `/v1/messages`
+- **AI Proxy**: To support the new messages API of `Anthropic`, the upstream path of the `Anthropic` for `llm/v1/chat` route type has changed from `/v1/complete` to `/v1/messages`.
  [#12699](https://github.com/Kong/kong/issues/12699)
  [FTI-5770](https://konghq.atlassian.net/browse/FTI-5770)
 
@@ -40,7 +40,7 @@
  [#12752](https://github.com/Kong/kong/issues/12752)
  [KAG-4050](https://konghq.atlassian.net/browse/KAG-4050)
 
-- Bump lua-protobuf to 0.5.1
+- Bumped lua-protobuf to 0.5.1
  [#12834](https://github.com/Kong/kong/issues/12834)
 
 
@@ -73,11 +73,11 @@
 
 #### Default
 
-- Add package `tzdata` to DEB Docker image for convenient timezone setting.
+- Added package `tzdata` to DEB Docker image for convenient timezone setting.
  [#12609](https://github.com/Kong/kong/issues/12609)
  [FTI-5698](https://konghq.atlassian.net/browse/FTI-5698)
 
-- Bump lua-resty-http to 0.17.2.
+- Bumped lua-resty-http to 0.17.2.
  [#12908](https://github.com/Kong/kong/issues/12908)
 
 
@@ -85,30 +85,30 @@
  [#12662](https://github.com/Kong/kong/issues/12662)
  [KAG-3883](https://konghq.atlassian.net/browse/KAG-3883)
 
-- Bump `ngx_wasm_module` to `91d447ffd0e9bb08f11cc69d1aa9128ec36b4526`
+- Bumped `ngx_wasm_module` to `91d447ffd0e9bb08f11cc69d1aa9128ec36b4526`
  [#12011](https://github.com/Kong/kong/issues/12011)
 
 
-- Bump `V8` version to `12.0.267.17`
+- Bumped `V8` version to `12.0.267.17`
  [#12704](https://github.com/Kong/kong/issues/12704)
 
 
-- Bump `Wasmtime` version to `19.0.0`
+- Bumped `Wasmtime` version to `19.0.0`
  [#12011](https://github.com/Kong/kong/issues/12011)
 
 
-- Improve the robustness of lua-cjson when handling unexpected input.
+- Improved the robustness of lua-cjson when handling unexpected input.
  [#12904](https://github.com/Kong/kong/issues/12904)
  [KAG-4275](https://konghq.atlassian.net/browse/KAG-4275)
 
 ### Features
 #### Configuration
 
-- now TLSv1.1 and lower is by default disabled in OpenSSL 3.x
+- TLSv1.1 and lower versions are disabled by default in OpenSSL 3.x.
  [#12420](https://github.com/Kong/kong/issues/12420)
  [KAG-3259](https://konghq.atlassian.net/browse/KAG-3259)
 
-- Introduce `nginx_wasm_main_shm_kv` configuration entry, which enables
+- Introduced the `nginx_wasm_main_shm_kv` configuration parameter, which enables
 Wasm filters to use the Proxy-Wasm operations `get_shared_data` and
 `set_shared_data` without namespaced keys.
  [#12663](https://github.com/Kong/kong/issues/12663)
@@ -118,25 +118,25 @@ Wasm filters to use the Proxy-Wasm operations `get_shared_data` and
  [#12686](https://github.com/Kong/kong/issues/12686)
  [KAG-3915](https://konghq.atlassian.net/browse/KAG-3915)
 
-- Add `wasm_filters` configuration value for enabling individual filters
+- Added the `wasm_filters` configuration parameter for enabling individual filters
  [#12843](https://github.com/Kong/kong/issues/12843)
  [KAG-4211](https://konghq.atlassian.net/browse/KAG-4211)
 #### Core
 
-- Add `events:ai:response_tokens`, `events:ai:prompt_tokens` and `events:ai:requests` to the anonymous report to start counting AI usage
+- Added `events:ai:response_tokens`, `events:ai:prompt_tokens` and `events:ai:requests` to the anonymous report to start counting AI usage
  [#12924](https://github.com/Kong/kong/issues/12924)
 
 
-- When CP runs with `expressions` flavor:
-- if mixed config is detected and a lower DP is attached to the CP, no config will be sent at all
-- if the expression is invalid on CP, no config will be sent at all
-- if the expression is invalid on lower DP, it will be sent to the DP and DP validation will catch this and communicate back to the CP (this could result in partial config application)
+- Improved config handling when the CP runs with the router set to the `expressions` flavor:
+  - If mixed config is detected and a lower DP is attached to the CP, no config will be sent at all
+  - If the expression is invalid on the CP, no config will be sent at all
+  - If the expression is invalid on a lower DP, it will be sent to the DP and DP validation will catch this and communicate back to the CP (this could result in partial config application)
  [#12967](https://github.com/Kong/kong/issues/12967)
  [KAG-3806](https://konghq.atlassian.net/browse/KAG-3806)
 
-- Supported fields `methods`, `hosts`, `paths`, `headers`,
-`snis`, `sources`, `destinations` and `regex_priority`
-for the `route` entity when the `router_flavor` is `expressions`.
+- The route entity now supports the following fields when the 
+`router_flavor` is `expressions`: `methods`, `hosts`, `paths`, `headers`,
+`snis`, `sources`, `destinations`, and `regex_priority`.
 The meaning of these fields are consistent with the traditional route entity.
  [#12667](https://github.com/Kong/kong/issues/12667)
  [KAG-3805](https://konghq.atlassian.net/browse/KAG-3805) [KAG-3807](https://konghq.atlassian.net/browse/KAG-3807)
@@ -147,20 +147,20 @@ when resolving hostnames.
  [KAG-3795](https://konghq.atlassian.net/browse/KAG-3795)
 #### PDK
 
-- Add `latencies.receive` property to log serializer
+- Added the `latencies.receive` property to the log serializer.
  [#12730](https://github.com/Kong/kong/issues/12730)
  [KAG-3798](https://konghq.atlassian.net/browse/KAG-3798)
 #### Plugin
 
-- AI Proxy now reads most prompt tuning parameters from the client, whilst the
-plugin config 'model options' are now just defaults. This fixes support for 
-using the respective provider's native SDK.
+- AI Proxy now reads most prompt tuning parameters from the client, 
+while the plugin config parameters under `model_options` are now just defaults.
+This fixes support for using the respective provider's native SDK.
  [#12903](https://github.com/Kong/kong/issues/12903)
  [KAG-4126](https://konghq.atlassian.net/browse/KAG-4126)
 
-- AI Proxy now has a 'preserve' route_type option, where the requests and responses 
-are passed directly to the upstream LLM. This is to enable compatilibity with any  
-and all models and SDKs, that may be used when calling the AI services.
+- AI Proxy now has a `preserve` option for `route_type`, where the requests and responses 
+are passed directly to the upstream LLM. This is to enable compatibility with any  
+and all models and SDKs that may be used when calling the AI services.
  [#12903](https://github.com/Kong/kong/issues/12903)
  [KAG-4126](https://konghq.atlassian.net/browse/KAG-4126)
 
@@ -168,11 +168,11 @@ and all models and SDKs, that may be used when calling the AI services.
  [#12836](https://github.com/Kong/kong/issues/12836)
  [FTI-5573](https://konghq.atlassian.net/browse/FTI-5573)
 
-- **AI-Proxy**: add support for streaming event-by-event responses back to client on supported providers
+- **AI Proxy**: Added support for streaming event-by-event responses back to the client on supported providers.
  [#12792](https://github.com/Kong/kong/issues/12792)
  [KAG-4124](https://konghq.atlassian.net/browse/KAG-4124)
 
-- **AI-Prompt-Guard**: increase the maximum length of regex expression to 500 for both allow and deny parameter
+- **AI Prompt Guard**: Increased the maximum length of regex expressions to 500 for the allow and deny parameters.
  [#12731](https://github.com/Kong/kong/issues/12731)
  [FTI-5767](https://konghq.atlassian.net/browse/FTI-5767)
 
@@ -184,7 +184,7 @@ and all models and SDKs, that may be used when calling the AI services.
  [#12638](https://github.com/Kong/kong/issues/12638)
  [KAG-3821](https://konghq.atlassian.net/browse/KAG-3821)
 
-- **OpenTelemetry, Zipkin**: the propagation module has been reworked, new
+- **OpenTelemetry, Zipkin**: The propagation module has been reworked. The new
 options allow better control over the configuration of tracing headers propagation.
  [#12670](https://github.com/Kong/kong/issues/12670)
  [KAG-1886](https://konghq.atlassian.net/browse/KAG-1886) [KAG-1887](https://konghq.atlassian.net/browse/KAG-1887)
@@ -209,26 +209,26 @@ tech preview and not officially supported by Kong Inc. for now.
 ### Fixes
 #### Configuration
 
-- Fixed default value in kong.conf.default documentation from 1000 to 10000
-for upstream_keepalive_max_requests option.
+- Fixed the default value in kong.conf.default documentation from 1000 to 10000
+for the `upstream_keepalive_max_requests` option.
  [#12643](https://github.com/Kong/kong/issues/12643)
  [KAG-3360](https://konghq.atlassian.net/browse/KAG-3360)
 
-- Fix an issue where an external plugin (Go, Javascript, or Python) would fail to
+- Fixed an issue where an external plugin (Go, Javascript, or Python) would fail to
 apply a change to the plugin config via the Admin API.
  [#12718](https://github.com/Kong/kong/issues/12718)
  [KAG-3949](https://konghq.atlassian.net/browse/KAG-3949)
 
-- Disable usage of the Lua DNS resolver from proxy-wasm by default.
+- Disabled usage of the Lua DNS resolver from proxy-wasm by default.
  [#12825](https://github.com/Kong/kong/issues/12825)
  [KAG-4277](https://konghq.atlassian.net/browse/KAG-4277)
 
-- Set security level of gRPC's TLS to 0 when ssl_cipher_suite is set to old
+- Set security level of gRPC's TLS to 0 when `ssl_cipher_suite` is set to `old`.
  [#12613](https://github.com/Kong/kong/issues/12613)
  [KAG-3259](https://konghq.atlassian.net/browse/KAG-3259)
 #### Core
 
-- Fixed an issue wherein `POST /config?flatten_errors=1` could not return a proper response if the input included duplicate upstream targets
+- Fixed an issue where `POST /config?flatten_errors=1` could not return a proper response if the input included duplicate upstream targets.
  [#12797](https://github.com/Kong/kong/issues/12797)
  [KAG-4144](https://konghq.atlassian.net/browse/KAG-4144)
 
@@ -236,15 +236,15 @@ apply a change to the plugin config via the Admin API.
  [#12640](https://github.com/Kong/kong/issues/12640)
  [FTI-5791](https://konghq.atlassian.net/browse/FTI-5791)
 
-- update file permission of kong.logrotate to 644
+- Updated the file permission of `kong.logrotate` to 644
  [#12629](https://github.com/Kong/kong/issues/12629)
  [FTI-5756](https://konghq.atlassian.net/browse/FTI-5756)
 
-- Fixed a problem that in hybrid DP mode a certificate entity configured with vault reference may not get refreshed on time
+- Fixed a problem on hybrid mode DPs, where a certificate entity configured with a vault reference may not get refreshed on time.
  [#12868](https://github.com/Kong/kong/issues/12868)
  [FTI-5881](https://konghq.atlassian.net/browse/FTI-5881)
 
-- Fix the missing router section for the output of the request-debugging
+- Fixed the missing router section for the output of the request-debugging.
  [#12234](https://github.com/Kong/kong/issues/12234)
  [KAG-3438](https://konghq.atlassian.net/browse/KAG-3438)
 
@@ -252,21 +252,21 @@ apply a change to the plugin config via the Admin API.
  [#12743](https://github.com/Kong/kong/issues/12743)
 
 
-- Fixed an issue where router may not work correctly
-when the routes configuration changed.
+- Fixed an issue where the router didn't work correctly
+when the route's configuration changed.
  [#12654](https://github.com/Kong/kong/issues/12654)
  [KAG-3857](https://konghq.atlassian.net/browse/KAG-3857)
 
-- Fixed an issue where SNI-based routing does not work
-using tls_passthrough and the traditional_compatible router flavor
+- Fixed an issue where SNI-based routing didn't work
+using `tls_passthrough` and the `traditional_compatible` router flavor.
  [#12681](https://github.com/Kong/kong/issues/12681)
  [KAG-3922](https://konghq.atlassian.net/browse/KAG-3922) [FTI-5781](https://konghq.atlassian.net/browse/FTI-5781)
 
-- fix a bug that `X-Kong-Upstream-Status` will not appear in the response headers even if it is set in the `headers` parameter in the kong.conf when the response is hit and returned by proxy cache plugin.
+- Fixed a bug that `X-Kong-Upstream-Status` didn't appear in the response headers even if it was set in the `headers` parameter in the `kong.conf` file when the response was hit and returned by the Proxy Cache plugin.
  [#12744](https://github.com/Kong/kong/issues/12744)
  [FTI-5827](https://konghq.atlassian.net/browse/FTI-5827)
 
-- fix vault initialization by postponing vault reference resolving on init_worker
+- Fixed vault initialization by postponing vault reference resolving on init_worker
  [#12554](https://github.com/Kong/kong/issues/12554)
  [KAG-2907](https://konghq.atlassian.net/browse/KAG-2907)
 
@@ -286,11 +286,11 @@ using tls_passthrough and the traditional_compatible router flavor
  [#12385](https://github.com/Kong/kong/issues/12385)
  [FTI-5707](https://konghq.atlassian.net/browse/FTI-5707)
 
-- **Plugin Server**: fix an issue where Kong fails to properly restart MessagePack-based pluginservers (used in Python and Javascript plugins, for example)
+- **Plugin Server**: Fixed an issue where Kong failed to properly restart MessagePack-based pluginservers (used in Python and Javascript plugins, for example).
  [#12582](https://github.com/Kong/kong/issues/12582)
  [KAG-3765](https://konghq.atlassian.net/browse/KAG-3765)
 
-- revert the hard-coded limitation of the ngx.read_body() API in OpenResty upstreams' new versions when downstream connections are in HTTP/2 or HTTP/3 stream modes.
+- Reverted the hard-coded limitation of the `ngx.read_body()` API in OpenResty upstreams' new versions when downstream connections are in HTTP/2 or HTTP/3 stream modes.
  [#12658](https://github.com/Kong/kong/issues/12658)
  [FTI-5766](https://konghq.atlassian.net/browse/FTI-5766) [FTI-5795](https://konghq.atlassian.net/browse/FTI-5795)
 
@@ -298,13 +298,13 @@ using tls_passthrough and the traditional_compatible router flavor
  [#12321](https://github.com/Kong/kong/issues/12321)
  [FTI-5559](https://konghq.atlassian.net/browse/FTI-5559)
 
-- Update telemetry collection for AI Plugins to allow multiple plugins data to be set for the same request.
+- Updated telemetry collection for AI Plugins to allow multiple plugins' data to be set for the same request.
  [#12583](https://github.com/Kong/kong/issues/12583)
  [KAG-3759](https://konghq.atlassian.net/browse/KAG-3759) [KAG-4124](https://konghq.atlassian.net/browse/KAG-4124)
 #### PDK
 
-- **PDK:** fix kong.request.get_forwarded_port to always return a number which was caused by an incorrectly
-stored string value in ngx.ctx.host_port.
+- **PDK:** Fixed `kong.request.get_forwarded_port` to always return a number, 
+which was caused by an incorrectly stored string value in `ngx.ctx.host_port`.
  [#12806](https://github.com/Kong/kong/issues/12806)
  [KAG-4158](https://konghq.atlassian.net/browse/KAG-4158)
 
@@ -323,7 +323,7 @@ affects payloads from all logging plugins that use the log serializer:
  [KAG-4218](https://konghq.atlassian.net/browse/KAG-4218)
 #### Plugin
 
-- **AI-proxy-plugin**: Fix the bug that the route_type `/llm/v1/chat` does not include the analytics in the responses.
+- **AI-proxy-plugin**: Fixed the bug that the `route_type` `/llm/v1/chat` didn't include the analytics in the responses.
  [#12781](https://github.com/Kong/kong/issues/12781)
  [FTI-5769](https://konghq.atlassian.net/browse/FTI-5769)
 
@@ -331,19 +331,20 @@ affects payloads from all logging plugins that use the log serializer:
  [#12773](https://github.com/Kong/kong/issues/12773)
  [KAG-4008](https://konghq.atlassian.net/browse/KAG-4008)
 
-- **AWS-Lambda**: fix an issue that the latency attributed to AWS Lambda API requests will be counted as part of the latency in Kong
+- **AWS-Lambda**: Fixed an issue where the latency attributed to AWS Lambda API requests was counted as part of the latency in Kong.
  [#12835](https://github.com/Kong/kong/issues/12835)
  [FTI-5261](https://konghq.atlassian.net/browse/FTI-5261)
 
-- **Jwt**: fix an issue where the plugin would fail when using invalid public keys for ES384 and ES512 algorithms.
+- **Jwt**: Fixed an issue where the plugin would fail when using invalid public keys for ES384 and ES512 algorithms.
  [#12724](https://github.com/Kong/kong/issues/12724)
 
 
-- Add WWW-Authenticate headers to all 401 response in key auth plugin.
+- Added WWW-Authenticate headers to all 401 responses in the Key Auth plugin.
  [#11794](https://github.com/Kong/kong/issues/11794)
  [KAG-321](https://konghq.atlassian.net/browse/KAG-321)
 
-- **Opentelemetry**: fix otel sampling mode lua panic bug when http_response_header_for_traceid option enable
+- **Opentelemetry**: Fixed an OTEL sampling mode Lua panic bug, which happened 
+when the `http_response_header_for_traceid` option was enabled.
  [#12544](https://github.com/Kong/kong/issues/12544)
  [FTI-5742](https://konghq.atlassian.net/browse/FTI-5742)
 #### Admin API
@@ -353,7 +354,7 @@ affects payloads from all logging plugins that use the log serializer:
  [KAG-3699](https://konghq.atlassian.net/browse/KAG-3699)
 #### Default
 
-- Fix a bug where the ulimit setting (open files) is low Kong will fail to start as the lua-resty-timer-ng exhausts the available worker_connections. Decrease the concurrency range of the lua-resty-timer-ng library from [512, 2048] to [256, 1024] to fix this bug.
+- Fixed a bug where, if the the ulimit setting (open files) was low, Kong would fail to start as the `lua-resty-timer-ng` exhausted the available `worker_connections`. Decreased the concurrency range of the `lua-resty-timer-ng` library from `[512, 2048]` to `[256, 1024]` to fix this bug.
  [#12606](https://github.com/Kong/kong/issues/12606)
  [KAG-3779](https://konghq.atlassian.net/browse/KAG-3779) [FTI-5780](https://konghq.atlassian.net/browse/FTI-5780)
 
