docs(changelog): apply review suggestions

--- a/changelog/3.7.0/3.7.0.md
+++ b/changelog/3.7.0/3.7.0.md
@@ -141,10 +141,6 @@ The meaning of these fields are consistent with the traditional route entity.
  [#12667](https://github.com/Kong/kong/issues/12667)
  [KAG-3805](https://konghq.atlassian.net/browse/KAG-3805) [KAG-3807](https://konghq.atlassian.net/browse/KAG-3807)
 
-- Added a new function to bypass the Kong's DNS client synchronization option
-when resolving hostnames.
- [#12739](https://github.com/Kong/kong/issues/12739)
- [KAG-3795](https://konghq.atlassian.net/browse/KAG-3795)
 #### PDK
 
 - Added the `latencies.receive` property to the log serializer.
@@ -190,15 +186,6 @@ options allow better control over the configuration of tracing headers propagati
  [KAG-1886](https://konghq.atlassian.net/browse/KAG-1886) [KAG-1887](https://konghq.atlassian.net/browse/KAG-1887)
 #### Clustering
 
-- Remote procedure call (RPC) framework for Hybrid mode deployments.
- [#12320](https://github.com/Kong/kong/issues/12320)
- [KAG-623](https://konghq.atlassian.net/browse/KAG-623) [KAG-3751](https://konghq.atlassian.net/browse/KAG-3751)
-
-- Dynamic log level over Hybrid mode RPC which allows setting DP log level
-to a different level for specified duration before reverting back
-to the `kong.conf` configured value.
- [#12320](https://github.com/Kong/kong/issues/12320)
- [KAG-623](https://konghq.atlassian.net/browse/KAG-623) [KAG-3751](https://konghq.atlassian.net/browse/KAG-3751)
 #### Default
 
 - Added support for debugging with EmmyLuaDebugger.  This feature is a
@@ -248,7 +235,7 @@ apply a change to the plugin config via the Admin API.
  [#12234](https://github.com/Kong/kong/issues/12234)
  [KAG-3438](https://konghq.atlassian.net/browse/KAG-3438)
 
-- Fixed an issue that leaking locks in the internal caching logic
+- Fixed an issue in the internal caching logic where mutexes could get never unlocked.
  [#12743](https://github.com/Kong/kong/issues/12743)
 
 
