docs(release): genereate 3.7.0 changelog

--- a/changelog/3.7.0/3.7.0.md
+++ b/changelog/3.7.0/3.7.0.md
@@ -13,7 +13,7 @@
  [KAG-3653](https://konghq.atlassian.net/browse/KAG-3653)
 #### Plugin
 
-- **OpenTelemetry**: Increased queue max batch size to 200.
+- **Opentelemetry**: Increased queue max batch size to 200.
  [#12488](https://github.com/Kong/kong/issues/12488)
  [KAG-3173](https://konghq.atlassian.net/browse/KAG-3173)
 
@@ -108,7 +108,7 @@
  [#12420](https://github.com/Kong/kong/issues/12420)
  [KAG-3259](https://konghq.atlassian.net/browse/KAG-3259)
 
-- Introduced the `nginx_wasm_main_shm_kv` configuration parameter, which enables
+- Introduced `nginx_wasm_main_shm_kv` configuration parameter, which enables
 Wasm filters to use the Proxy-Wasm operations `get_shared_data` and
 `set_shared_data` without namespaced keys.
  [#12663](https://github.com/Kong/kong/issues/12663)
@@ -134,28 +134,27 @@ Wasm filters to use the Proxy-Wasm operations `get_shared_data` and
  [#12967](https://github.com/Kong/kong/issues/12967)
  [KAG-3806](https://konghq.atlassian.net/browse/KAG-3806)
 
-- The route entity now supports the following fields when the 
+- The route entity now supports the following fields when the
 `router_flavor` is `expressions`: `methods`, `hosts`, `paths`, `headers`,
 `snis`, `sources`, `destinations`, and `regex_priority`.
 The meaning of these fields are consistent with the traditional route entity.
  [#12667](https://github.com/Kong/kong/issues/12667)
  [KAG-3805](https://konghq.atlassian.net/browse/KAG-3805) [KAG-3807](https://konghq.atlassian.net/browse/KAG-3807)
-
 #### PDK
 
-- Added the `latencies.receive` property to the log serializer.
+- Added the `latencies.receive` property to the log serializer
  [#12730](https://github.com/Kong/kong/issues/12730)
  [KAG-3798](https://konghq.atlassian.net/browse/KAG-3798)
 #### Plugin
 
-- AI Proxy now reads most prompt tuning parameters from the client, 
+- AI Proxy now reads most prompt tuning parameters from the client,
 while the plugin config parameters under `model_options` are now just defaults.
 This fixes support for using the respective provider's native SDK.
  [#12903](https://github.com/Kong/kong/issues/12903)
  [KAG-4126](https://konghq.atlassian.net/browse/KAG-4126)
 
-- AI Proxy now has a `preserve` option for `route_type`, where the requests and responses 
-are passed directly to the upstream LLM. This is to enable compatibility with any  
+- AI Proxy now has a `preserve` option for `route_type`, where the requests and responses
+are passed directly to the upstream LLM. This is to enable compatibility with any
 and all models and SDKs that may be used when calling the AI services.
  [#12903](https://github.com/Kong/kong/issues/12903)
  [KAG-4126](https://konghq.atlassian.net/browse/KAG-4126)
@@ -184,8 +183,6 @@ and all models and SDKs that may be used when calling the AI services.
 options allow better control over the configuration of tracing headers propagation.
  [#12670](https://github.com/Kong/kong/issues/12670)
  [KAG-1886](https://konghq.atlassian.net/browse/KAG-1886) [KAG-1887](https://konghq.atlassian.net/browse/KAG-1887)
-#### Clustering
-
 #### Default
 
 - Added support for debugging with EmmyLuaDebugger.  This feature is a
@@ -194,6 +191,12 @@ tech preview and not officially supported by Kong Inc. for now.
  [KAG-4316](https://konghq.atlassian.net/browse/KAG-4316)
 
 ### Fixes
+#### CLI Command
+
+- Fixed an issue where the `pg_timeout` was overridden to `60s` even if `--db-timeout`
+was not explicitly passed in CLI arguments.
+ [#12981](https://github.com/Kong/kong/issues/12981)
+ [KAG-4416](https://konghq.atlassian.net/browse/KAG-4416)
 #### Configuration
 
 - Fixed the default value in kong.conf.default documentation from 1000 to 10000
@@ -223,7 +226,7 @@ apply a change to the plugin config via the Admin API.
  [#12640](https://github.com/Kong/kong/issues/12640)
  [FTI-5791](https://konghq.atlassian.net/browse/FTI-5791)
 
-- Updated the file permission of `kong.logrotate` to 644
+- Updated the file permission of `kong.logrotate` to 644.
  [#12629](https://github.com/Kong/kong/issues/12629)
  [FTI-5756](https://konghq.atlassian.net/browse/FTI-5756)
 
@@ -285,12 +288,12 @@ using `tls_passthrough` and the `traditional_compatible` router flavor.
  [#12321](https://github.com/Kong/kong/issues/12321)
  [FTI-5559](https://konghq.atlassian.net/browse/FTI-5559)
 
-- Updated telemetry collection for AI Plugins to allow multiple plugins' data to be set for the same request.
+- Updated telemetry collection for AI Plugins to allow multiple plugins data to be set for the same request.
  [#12583](https://github.com/Kong/kong/issues/12583)
  [KAG-3759](https://konghq.atlassian.net/browse/KAG-3759) [KAG-4124](https://konghq.atlassian.net/browse/KAG-4124)
 #### PDK
 
-- **PDK:** Fixed `kong.request.get_forwarded_port` to always return a number, 
+- **PDK:** Fixed `kong.request.get_forwarded_port` to always return a number,
 which was caused by an incorrectly stored string value in `ngx.ctx.host_port`.
  [#12806](https://github.com/Kong/kong/issues/12806)
  [KAG-4158](https://konghq.atlassian.net/browse/KAG-4158)
@@ -301,7 +304,8 @@ the response receive time, so it now has the same value as the
 the new `latencies.receive` metric, so if desired, the old value can be
 calculated as `latencies.kong + latencies.receive`. **Note:** this also
 affects payloads from all logging plugins that use the log serializer:
-`file-log`, `tcp-log`, `udp-log`,`http-log`, `syslog`, and `loggly`.
+`file-log`, `tcp-log`, `udp-log`,`http-log`, `syslog`, and `loggly`, e.g.
+[descriptions of JSON objects for the HTTP Log Plugin's log format](https://docs.konghq.com/hub/kong-inc/http-log/log-format/#json-object-descriptions).
  [#12795](https://github.com/Kong/kong/issues/12795)
  [KAG-3798](https://konghq.atlassian.net/browse/KAG-3798)
 
@@ -330,10 +334,25 @@ affects payloads from all logging plugins that use the log serializer:
  [#11794](https://github.com/Kong/kong/issues/11794)
  [KAG-321](https://konghq.atlassian.net/browse/KAG-321)
 
-- **Opentelemetry**: Fixed an OTEL sampling mode Lua panic bug, which happened 
-when the `http_response_header_for_traceid` option was enabled.
+- **Opentelemetry**: Fixed an OTEL sampling mode Lua panic bug, which happened when the `http_response_header_for_traceid` option was enabled.
  [#12544](https://github.com/Kong/kong/issues/12544)
  [FTI-5742](https://konghq.atlassian.net/browse/FTI-5742)
+
+- Improve error handling in AI plugins.
+ [#12991](https://github.com/Kong/kong/issues/12991)
+ [KAG-4311](https://konghq.atlassian.net/browse/KAG-4311)
+
+- **ACME**: Fixed migration of redis configuration.
+ [#12989](https://github.com/Kong/kong/issues/12989)
+ [KAG-4419](https://konghq.atlassian.net/browse/KAG-4419)
+
+- **Response-RateLimiting**: Fixed migration of redis configuration.
+ [#12989](https://github.com/Kong/kong/issues/12989)
+ [KAG-4419](https://konghq.atlassian.net/browse/KAG-4419)
+
+- **Rate-Limiting**: Fixed migration of redis configuration.
+ [#12989](https://github.com/Kong/kong/issues/12989)
+ [KAG-4419](https://konghq.atlassian.net/browse/KAG-4419)
 #### Admin API
 
 - **Admin API**: fixed an issue where calling the endpoint `POST /schemas/vaults/validate` was conflicting with the endpoint `/schemas/vaults/:name` which only has GET implemented, hence resulting in a 405.
