docs(release): genereate 3.7.0 changelog

--- a/changelog/3.7.0/3.7.0.md
+++ b/changelog/3.7.0/3.7.0.md
@@ -318,6 +318,10 @@ affects payloads from all logging plugins that use the log serializer:
  [#12781](https://github.com/Kong/kong/issues/12781)
  [FTI-5769](https://konghq.atlassian.net/browse/FTI-5769)
 
+- Improve error handling in AI plugins.
+ [#12991](https://github.com/Kong/kong/issues/12991)
+ [KAG-4311](https://konghq.atlassian.net/browse/KAG-4311)
+
 - **ACME**: Fixed an issue where the certificate was not successfully renewed during ACME renewal.
  [#12773](https://github.com/Kong/kong/issues/12773)
  [KAG-4008](https://konghq.atlassian.net/browse/KAG-4008)
@@ -330,18 +334,6 @@ affects payloads from all logging plugins that use the log serializer:
  [#12724](https://github.com/Kong/kong/issues/12724)
 
 
-- Added WWW-Authenticate headers to all 401 responses in the Key Auth plugin.
- [#11794](https://github.com/Kong/kong/issues/11794)
- [KAG-321](https://konghq.atlassian.net/browse/KAG-321)
-
-- **Opentelemetry**: Fixed an OTEL sampling mode Lua panic bug, which happened when the `http_response_header_for_traceid` option was enabled.
- [#12544](https://github.com/Kong/kong/issues/12544)
- [FTI-5742](https://konghq.atlassian.net/browse/FTI-5742)
-
-- Improve error handling in AI plugins.
- [#12991](https://github.com/Kong/kong/issues/12991)
- [KAG-4311](https://konghq.atlassian.net/browse/KAG-4311)
-
 - **ACME**: Fixed migration of redis configuration.
  [#12989](https://github.com/Kong/kong/issues/12989)
  [KAG-4419](https://konghq.atlassian.net/browse/KAG-4419)
@@ -353,6 +345,56 @@ affects payloads from all logging plugins that use the log serializer:
 - **Rate-Limiting**: Fixed migration of redis configuration.
  [#12989](https://github.com/Kong/kong/issues/12989)
  [KAG-4419](https://konghq.atlassian.net/browse/KAG-4419)
+
+- Added WWW-Authenticate headers to all 401 responses in the Key Auth plugin.
+ [#11794](https://github.com/Kong/kong/issues/11794)
+ [KAG-321](https://konghq.atlassian.net/browse/KAG-321)
+
+- **Opentelemetry**: Fixed an OTEL sampling mode Lua panic bug, which happened when the `http_response_header_for_traceid` option was enabled.
+ [#12544](https://github.com/Kong/kong/issues/12544)
+ [FTI-5742](https://konghq.atlassian.net/browse/FTI-5742)
+
+- **AI-proxy-plugin**: Fixed a bug where certain Azure models would return partial tokens/words 
+when in response-streaming mode.
+ [#13230](https://github.com/Kong/kong/issues/13230)
+ [KAG-4596](https://konghq.atlassian.net/browse/KAG-4596)
+
+- **AI-proxy-plugin**: Fixed a bug where Cohere and Anthropic providers don't read the `model` parameter properly 
+from the caller's request body.
+ [#13230](https://github.com/Kong/kong/issues/13230)
+ [KAG-4596](https://konghq.atlassian.net/browse/KAG-4596)
+
+- **AI-proxy-plugin**: Fixed a bug where using "OpenAI Function" inference requests would log a 
+request error, and then hang until timeout.
+ [#13230](https://github.com/Kong/kong/issues/13230)
+ [KAG-4596](https://konghq.atlassian.net/browse/KAG-4596)
+
+- **AI-proxy-plugin**: Fixed a bug where AI Proxy would still allow callers to specify their own model,  
+ignoring the plugin-configured model name.
+ [#13230](https://github.com/Kong/kong/issues/13230)
+ [KAG-4596](https://konghq.atlassian.net/browse/KAG-4596)
+
+- **AI-proxy-plugin**: Fixed a bug where AI Proxy would not take precedence of the 
+plugin's configured model tuning options, over those in the user's LLM request.
+ [#13230](https://github.com/Kong/kong/issues/13230)
+ [KAG-4596](https://konghq.atlassian.net/browse/KAG-4596)
+
+- **AI-proxy-plugin**: Fixed a bug where setting OpenAI SDK model parameter "null" caused analytics 
+to not be written to the logging plugin(s).
+ [#13230](https://github.com/Kong/kong/issues/13230)
+ [KAG-4596](https://konghq.atlassian.net/browse/KAG-4596)
+
+- **AI-Proxy**: Resolved a bug where the object constructor would set data on the class instead of the instance
+ [#13189](https://github.com/Kong/kong/issues/13189)
+
+
+- **Basic-Auth**: Fix an issue of realm field not recognized for older kong versions (before 3.6)
+ [#13127](https://github.com/Kong/kong/issues/13127)
+ [KAG-4516](https://konghq.atlassian.net/browse/KAG-4516)
+
+- **Key-Auth**: Fix an issue of realm field not recognized for older kong versions (before 3.7)
+ [#13127](https://github.com/Kong/kong/issues/13127)
+ [KAG-4516](https://konghq.atlassian.net/browse/KAG-4516)
 #### Admin API
 
 - **Admin API**: fixed an issue where calling the endpoint `POST /schemas/vaults/validate` was conflicting with the endpoint `/schemas/vaults/:name` which only has GET implemented, hence resulting in a 405.
