docs(changelog): manual fixing of changelog - 2 missing entries

--- a/changelog/3.7.0/3.7.0.md
+++ b/changelog/3.7.0/3.7.0.md
@@ -11,6 +11,10 @@
 - Sped up the router matching when the `router_flavor` is `traditional_compatible` or `expressions`.
  [#12467](https://github.com/Kong/kong/issues/12467)
  [KAG-3653](https://konghq.atlassian.net/browse/KAG-3653)
+
+ - Fixed an inefficiency issue in the Luajit hashing algorithm
+ [#13240](https://github.com/Kong/kong/issues/13240)
+ [KAG-4646](https://konghq.atlassian.net/browse/KAG-4646)
 #### Plugin
 
 - **Opentelemetry**: Increased queue max batch size to 200.
@@ -291,6 +295,14 @@ using `tls_passthrough` and the `traditional_compatible` router flavor.
 - Updated telemetry collection for AI Plugins to allow multiple plugins data to be set for the same request.
  [#12583](https://github.com/Kong/kong/issues/12583)
  [KAG-3759](https://konghq.atlassian.net/browse/KAG-3759) [KAG-4124](https://konghq.atlassian.net/browse/KAG-4124)
+- **AI-proxy**: A configuration validation is added to prevent from enabling `log_statistics` upon
+  providers not supporting statistics. Accordingly, the default of `log_statistics` is changed from
+  `true` to `false`, and a database migration is added as well for disabling `log_statistics` if it
+  has already been enabled upon unsupported providers.
+ [#12860](https://github.com/Kong/kong/issues/12860)
+ [FTI-5769](https://konghq.atlassian.net/browse/FTI-5769)
+
+
 #### PDK
 
 - **PDK:** Fixed `kong.request.get_forwarded_port` to always return a number,
